--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
     <p class="error">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
-    <script src="index.js" type="module"></script>
+    <script src="./index.html" type="module"></script>
   </body>
 </html>
